--- a/index.html
+++ b/index.html
@@ -69,19 +69,7 @@
                         </p>
                 </div> -->
                 <div class="py-2">
-                    <!-- First Experience: Research Intern at IIT Bhubaneswar -->
-                    <div class="experience">
-                        <div class="experience-header">
-                            <span class="papertitle">Research Intern</span>
-                            <span class="duration">August 2024 - Present</span>
-                        </div>
-                        <span class="conf institution">IIT Bhubaneswar</span>
-                        <p class="paper my-2 pl-2">
-                            <!-- Your description for the IIT Bhubaneswar experience goes here -->
-                            Here, I am working with Professor <a href="https://devashreetrip.github.io/">Devashree Tripathi</a>, developing a robust and high-fidelity framework for Sustainable LLM inference. We are using inference simulation frameworks like <a href="https://www.microsoft.com/en-us/research/publication/vidur-a-large-scale-simulation-framework-for-llm-inference/">VIDUR</a> from the Microsoft Research team in India and performing GPU knob tuning according to the request workload. Our goal is to significantly reduce the energy usage of LLM inference systems without impacting performance metrics.
-                        </p>
-                    </div>
-                    
+                   
                     <!-- Second Experience: Research Intern at IIT Patna -->
                     <div class="experience">
                         <div class="experience-header">
@@ -95,11 +83,11 @@
                         </p>
                     </div>
                     <div class="row text-center py-4">
-                        <div class="mx-auto mt-2">
+<!--                         <div class="mx-auto mt-2">
                             <img class="img-fluid instilogo p-3" src="assets/images/iitbbs.png">
                             <div class="institution">IIT Bhubhaneshwar</div>
                             <div class="years">August,2024--Present</div>
-                        </div>
+                        </div> -->
                         <div class="mx-auto mt-2">
                             <img class="img-fluid instilogo p-1" src="assets/images/iitp.png">
                             <div class="institution">IIT Patna</div>
