--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 
                 
                 <img src="assets/images/profile2-removebg-preview.png" class="profilepic pt-3 pb-2">
-                <div class="pt-5 menur"><a class="menulink" target="_blank" href="assets/pdfs/CV.pdf">curriculum vitae</a></div>
+                <div class="pt-5 menur"><a class="menulink" target="_blank" href="https://drive.google.com/file/d/1bx4gU-5IXyBopSbxLRJxfdxPSlswOrQM/view?usp=sharing">curriculum vitae</a></div>
                 <div class=""><a class="menulink" target="_blank" href="mailto:amrendrapratapsingh0306@gmail.com">Email</a></div>
                 <div class=""><a class="menulink" target="_blank" href="https://github.com/stackmuzz">Github</a></div>
                 <div class=""><a class="menulink" target="_blank" href="https://www.linkedin.com/in/amrendra-pratap-singh/">Linkedin</a></div>
