--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </p>
 
                 <p>
-                    Feel free to look at my <a class="in-text" href="assets/pdfs/CV.pdf" target="_blank">CV</a>!
+                    Feel free to look at my <a class="in-text" href="https://drive.google.com/file/d/1bx4gU-5IXyBopSbxLRJxfdxPSlswOrQM/view?usp=sharing" target="_blank">CV</a>!
                 </p>
 
                 <p class="header pt-5">Experience</p>
